[gd_scene load_steps=19 format=4 uid="uid://bpi7w14xkyutn"]

[ext_resource type="Script" path="res://scripts/windows_scene_1.gd" id="1_e1qb4"]
[ext_resource type="PackedScene" uid="uid://bgwy04acidn6x" path="res://scenes/windows_scene_2.tscn" id="2_uyy70"]
<<<<<<< Updated upstream
[ext_resource type="PackedScene" path="res://scenes/background_windows.tscn" id="2_ya7lr"]
=======
>>>>>>> Stashed changes
[ext_resource type="Texture2D" uid="uid://dunokk2wlu8cc" path="res://assets/sprites/windows/windows_xp_taskbar.png" id="3_4wxaa"]
[ext_resource type="Texture2D" uid="uid://dmlbhrjy2cooa" path="res://assets/sprites/windows/flagpole.png" id="4_ag0fd"]
[ext_resource type="Texture2D" uid="uid://b66hsqkp5xlun" path="res://assets/sprites/windows/block.png" id="5_3hrof"]
[ext_resource type="Texture2D" uid="uid://caxu2r04fsam0" path="res://assets/sprites/windows/brick.png" id="6_wh1vh"]
[ext_resource type="PackedScene" uid="uid://b3pf5m8e51gmk" path="res://scenes/player_side.tscn" id="7_m3xc2"]
[ext_resource type="Shader" path="res://assets/sprites/windows/shaders/stage2puzzle2.gdshader" id="8_836ee"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0v1w6"]
texture = ExtResource("4_ag0fd")
0:0/size_in_atlas = Vector2i(1, 11)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, 72.25, 7.75, 71.5, 8.25, 88, -8.25, 87.25)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pqhe5"]
texture = ExtResource("5_3hrof")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6csbs"]
texture = ExtResource("6_wh1vh")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_f4swh"]
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_pqhe5")
sources/4 = SubResource("TileSetAtlasSource_6csbs")
sources/0 = SubResource("TileSetAtlasSource_0v1w6")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pr0f7"]
distance = -1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_epvam"]
radius = 13.1529

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arhqp"]
shader = ExtResource("8_836ee")
shader_parameter/shake_power = 0.045
shader_parameter/shake_rate = 0.303
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.021

[sub_resource type="Animation" id="Animation_n1rur"]
resource_name = "player_walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsu3e"]
_data = {
"player_walk": SubResource("Animation_n1rur")
}

[node name="windows_scene_1" type="Node2D"]
script = ExtResource("1_e1qb4")
next_scene = ExtResource("2_uyy70")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" parent="CanvasLayer" instance=ExtResource("2_ya7lr")]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 418.0
offset_bottom = 235.0
metadata/_edit_use_anchors_ = true

[node name="Taskbar" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -3.0
offset_top = 135.0
offset_right = 1363.0
offset_bottom = 639.0
texture = ExtResource("3_4wxaa")
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAACMABAAAAAAAAAAAACQABAAAAAAAAAABACMABAAAAAAAAAABACQABAAAAAAAAAABACUABAAAAAAAAAACACMABAAAAAAAAAACACQABAAAAAAAAAACACUABAAAAAAAAAADACMABAAAAAAAAAADACQABAAAAAAAAAADACUABAAAAAAAAAAEACMABAAAAAAAAAAEACQABAAAAAAAAAAEACUABAAAAAAAAAAFACMABAAAAAAAAAAFACQABAAAAAAAAAAFACUABAAAAAAAAAAGACMABAAAAAAAAAAGACQABAAAAAAAAAAGACUABAAAAAAAAAAHACMABAAAAAAAAAAHACQABAAAAAAAAAAHACUABAAAAAAAAAAIACMABAAAAAAAAAAIACQABAAAAAAAAAAIACUABAAAAAAAAAAJACMABAAAAAAAAAAJACQABAAAAAAAAAAJACUABAAAAAAAAAAKACMABAAAAAAAAAAKACQABAAAAAAAAAAKACUABAAAAAAAAAALACMABAAAAAAAAAALACQABAAAAAAAAAALACUABAAAAAAAAAAMACMABAAAAAAAAAAMACQABAAAAAAAAAAMACUABAAAAAAAAAANACMABAAAAAAAAAANACQABAAAAAAAAAANACUABAAAAAAAAAAOACMABAAAAAAAAAAOACQABAAAAAAAAAAOACUABAAAAAAAAAAPACMABAAAAAAAAAAPACQABAAAAAAAAAAPACUABAAAAAAAAAAQACQABAAAAAAAAAAQACUABAAAAAAAAAARACQABAAAAAAAAAARACUABAAAAAAAAAASACQABAAAAAAAAAASACUABAAAAAAAAAATACQABAAAAAAAAAATACUABAAAAAAAAAAUACQABAAAAAAAAAAUACUABAAAAAAAAAAVACQABAAAAAAAAAAVACUABAAAAAAAAAAWACMABAAAAAAAAAAWACQABAAAAAAAAAAWACUABAAAAAAAAAAXACMABAAAAAAAAAAXACQABAAAAAAAAAAXACUABAAAAAAAAAAYACMABAAAAAAAAAAYACQABAAAAAAAAAAYACUABAAAAAAAAAAZACMABAAAAAAAAAAZACQABAAAAAAAAAAZACUABAAAAAAAAAAaACMABAAAAAAAAAAaACQABAAAAAAAAAAaACUABAAAAAAAAAAeACMABAAAAAAAAAAeACQABAAAAAAAAAAeACUABAAAAAAAAAAfACMABAAAAAAAAAAfACQABAAAAAAAAAAfACUABAAAAAAAAAAgACMABAAAAAAAAAAgACQABAAAAAAAAAAgACUABAAAAAAAAAAhACMABAAAAAAAAAAhACQABAAAAAAAAAAhACUABAAAAAAAAAAiACMABAAAAAAAAAAiACQABAAAAAAAAAAiACUABAAAAAAAAAAjACMABAAAAAAAAAAjACQABAAAAAAAAAAjACUABAAAAAAAAAAkACMABAAAAAAAAAAkACQABAAAAAAAAAAkACUABAAAAAAAAAAlACMABAAAAAAAAAAlACQABAAAAAAAAAAlACUABAAAAAAAAAAmACMABAAAAAAAAAAmACQABAAAAAAAAAAmACUABAAAAAAAAAAnACMABAAAAAAAAAAnACQABAAAAAAAAAAnACUABAAAAAAAAAAoACMABAAAAAAAAAAoACQABAAAAAAAAAAoACUABAAAAAAAAAApACMABAAAAAAAAAApACQABAAAAAAAAAApACUABAAAAAAAAAAqACMABAAAAAAAAAAqACQABAAAAAAAAAAqACUABAAAAAAAAAArACMABAAAAAAAAAArACQABAAAAAAAAAArACUABAAAAAAAAAAsACMABAAAAAAAAAAsACQABAAAAAAAAAAsACUABAAAAAAAAAAtACMABAAAAAAAAAAtACQABAAAAAAAAAAtACUABAAAAAAAAAAuACMABAAAAAAAAAAuACQABAAAAAAAAAAuACUABAAAAAAAAAAvACMABAAAAAAAAAAvACQABAAAAAAAAAAvACUABAAAAAAAAAAwACMABAAAAAAAAAAwACQABAAAAAAAAAAwACUABAAAAAAAAAAxACMABAAAAAAAAAAxACQABAAAAAAAAAAxACUABAAAAAAAAAAyACMABAAAAAAAAAAyACQABAAAAAAAAAAyACUABAAAAAAAAAAzACMABAAAAAAAAAAzACQABAAAAAAAAAAzACUABAAAAAAAAAA0ACMABAAAAAAAAAA0ACQABAAAAAAAAAA0ACUABAAAAAAAAAA1ACMABAAAAAAAAAA1ACQABAAAAAAAAAA1ACUABAAAAAAAAAA2ACMABAAAAAAAAAA2ACQABAAAAAAAAAA2ACUABAAAAAAAAAA3ACMABAAAAAAAAAA3ACQABAAAAAAAAAA3ACUABAAAAAAAAAA4ACMABAAAAAAAAAA4ACQABAAAAAAAAAA4ACUABAAAAAAAAAA5ACMABAAAAAAAAAA5ACQABAAAAAAAAAA5ACUABAAAAAAAAAA6ACMABAAAAAAAAAA6ACQABAAAAAAAAAA6ACUABAAAAAAAAAA7ACMABAAAAAAAAAA7ACQABAAAAAAAAAA7ACUABAAAAAAAAAA8ACMABAAAAAAAAAA8ACQABAAAAAAAAAA8ACUABAAAAAAAAAA9ACMABAAAAAAAAAA9ACQABAAAAAAAAAA9ACUABAAAAAAAAAA+ACMABAAAAAAAAAA+ACQABAAAAAAAAAA+ACUABAAAAAAAAAA/ACMABAAAAAAAAAA/ACQABAAAAAAAAAA/ACUABAAAAAAAAABAACMABAAAAAAAAABAACQABAAAAAAAAABAACUABAAAAAAAAABBACMABAAAAAAAAABBACQABAAAAAAAAABBACUABAAAAAAAAABCACMABAAAAAAAAABCACQABAAAAAAAAABCACUABAAAAAAAAABDACMABAAAAAAAAABDACQABAAAAAAAAABDACUABAAAAAAAAABEACMABAAAAAAAAABEACQABAAAAAAAAABEACUABAAAAAAAAABFACMABAAAAAAAAABFACQABAAAAAAAAABFACUABAAAAAAAAABHACMABAAAAAAAAABHACQABAAAAAAAAABHACUABAAAAAAAAABIACMABAAAAAAAAABIACQABAAAAAAAAABIACUABAAAAAAAAABJACMABAAAAAAAAABJACQABAAAAAAAAABJACUABAAAAAAAAABKACMABAAAAAAAAABKACQABAAAAAAAAABKACUABAAAAAAAAABPACMABAAAAAAAAABPACQABAAAAAAAAABPACUABAAAAAAAAABQACMABAAAAAAAAABQACQABAAAAAAAAABQACUABAAAAAAAAABRACMABAAAAAAAAABRACQABAAAAAAAAABRACUABAAAAAAAAABSACMABAAAAAAAAABSACQABAAAAAAAAABSACUABAAAAAAAAABTACQABAAAAAAAAABTACUABAAAAAAAAABUACUABAAAAAAAAABVACMABAAAAAAAAABVACQABAAAAAAAAABVACUABAAAAAAAAABWACMABAAAAAAAAABWACQABAAAAAAAAABWACUABAAAAAAAAABXACMABAAAAAAAAABXACQABAAAAAAAAABXACUABAAAAAAAAABYACMABAAAAAAAAABYACQABAAAAAAAAABYACUABAAAAAAAAABZACMABAAAAAAAAABZACQABAAAAAAAAABZACUABAAAAAAAAABaACMABAAAAAAAAABaACQABAAAAAAAAABaACUABAAAAAAAAABbACMABAAAAAAAAABbACQABAAAAAAAAABbACUABAAAAAAAAABcACMABAAAAAAAAABcACQABAAAAAAAAABcACUABAAAAAAAAABdACMABAAAAAAAAABdACQABAAAAAAAAABdACUABAAAAAAAAAAAABsAAwAAAAAAAAAAABwAAwAAAAAAAAAAAB0AAwAAAAAAAAAAAB4AAwAAAAAAAAAAAB8AAwAAAAAAAAAAACAAAwAAAAAAAAAAACEAAwAAAAAAAAAAACIAAwAAAAAAAABdABkAAwAAAAAAAABdABoAAwAAAAAAAABdABsAAwAAAAAAAABdABwAAwAAAAAAAABdAB0AAwAAAAAAAABdAB4AAwAAAAAAAABdAB8AAwAAAAAAAABdACAAAwAAAAAAAABdACEAAwAAAAAAAABdACIAAwAAAAAAAAAQACMABAAAAAAAAAARACMABAAAAAAAAAASACMABAAAAAAAAAATACMABAAAAAAAAAAUACMABAAAAAAAAAAVACMABAAAAAAAAAAAACUABAAAAAAAAABLACMABAAAAAAAAABLACQABAAAAAAAAABLACUABAAAAAAAAABMACMABAAAAAAAAABMACQABAAAAAAAAABMACUABAAAAAAAAABNACMABAAAAAAAAABNACQABAAAAAAAAABNACUABAAAAAAAAABOACMABAAAAAAAAABOACQABAAAAAAAAABOACUABAAAAAAAAABdABgAAwAAAAAAAABdABcAAwAAAAAAAABdABYAAwAAAAAAAABdABUAAwAAAAAAAABdABQAAwAAAAAAAABdABMAAwAAAAAAAABdABIAAwAAAAAAAABdABEAAwAAAAAAAABdABAAAwAAAAAAAABdAA8AAwAAAAAAAABdAA4AAwAAAAAAAABdAA0AAwAAAAAAAABdAAwAAwAAAAAAAAAAABYAAwAAAAAAAAAAABUAAwAAAAAAAAAAABQAAwAAAAAAAAAAABMAAwAAAAAAAAAAABIAAwAAAAAAAAAAABEAAwAAAAAAAAAAABAAAwAAAAAAAAAAAA8AAwAAAAAAAAAAAA4AAwAAAAAAAAAAAA0AAwAAAAAAAAAAABcAAwAAAAAAAAAAABgAAwAAAAAAAAAAABkAAwAAAAAAAAAAABoAAwAAAAAAAAAQAB4AAwAAAAAAAAARAB4AAwAAAAAAAAASAB4AAwAAAAAAAAATAB4AAwAAAAAAAAAUAB4AAwAAAAAAAAAVAB4AAwAAAAAAAAAWAB4AAwAAAAAAAAAXAB4AAwAAAAAAAAAKACEAAwAAAAAAAAALACEAAwAAAAAAAAAOACAAAwAAAAAAAAANACAAAwAAAAAAAAAaAB4AAwAAAAAAAAAbAB4AAwAAAAAAAAAcAB4AAwAAAAAAAAAgAB8AAwAAAAAAAAAgACAAAwAAAAAAAAAhACAAAwAAAAAAAAAfAB8AAwAAAAAAAAAlAB4AAwAAAAAAAAAmAB4AAwAAAAAAAAAkAB8AAwAAAAAAAAAjAB8AAwAAAAAAAAArAB0AAwAAAAAAAAAqAB0AAwAAAAAAAAApAB0AAwAAAAAAAAAuACAAAwAAAAAAAAAvACAAAwAAAAAAAAAtAB8AAwAAAAAAAABTACMABAAAAAAAAABUACMABAAAAAAAAABUACQABAAAAAAAAAA=")
tile_set = SubResource("TileSet_f4swh")

[node name="PlayerSide" parent="TileMapLayer" instance=ExtResource("7_m3xc2")]
position = Vector2(103, 547)

<<<<<<< Updated upstream
[node name="Camera2D" type="Camera2D" parent="TileMapLayer/PlayerSide"]
zoom = Vector2(2.75, 2.75)
=======
[node name="downloading" type="StaticBody2D" parent="Platforms"]
position = Vector2(415, 434)
scale = Vector2(0.755, 0.755)

[node name="TextureRect" type="TextureRect" parent="Platforms/downloading"]
offset_right = 668.0
offset_bottom = 307.0
scale = Vector2(0.377362, 0.377362)
texture = ExtResource("37_upray")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/downloading"]
position = Vector2(126, 56.5)
shape = SubResource("RectangleShape2D_k7nuy")

[node name="critical_error" type="StaticBody2D" parent="Platforms"]
position = Vector2(881, 444)
scale = Vector2(0.755, 0.755)

[node name="TextureRect" type="TextureRect" parent="Platforms/critical_error"]
offset_right = 668.0
offset_bottom = 307.0
scale = Vector2(0.377362, 0.377362)
texture = ExtResource("38_t8wpb")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/critical_error"]
position = Vector2(126, 56.5)
shape = SubResource("RectangleShape2D_k7nuy")

[node name="browser" type="StaticBody2D" parent="Platforms"]
position = Vector2(93, 392)
scale = Vector2(0.755, 0.755)

[node name="TextureRect" type="TextureRect" parent="Platforms/browser"]
offset_right = 668.0
offset_bottom = 307.0
scale = Vector2(0.106199, 0.106199)
texture = ExtResource("39_0ver1")
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/browser"]
position = Vector2(182.417, 33.4107)
shape = SubResource("RectangleShape2D_s3u6h")

[node name="download_failed" type="StaticBody2D" parent="Platforms"]
position = Vector2(658, 465)
scale = Vector2(0.755, 0.755)

[node name="TextureRect" type="TextureRect" parent="Platforms/download_failed"]
offset_right = 668.0
offset_bottom = 307.0
scale = Vector2(0.377362, 0.377362)
texture = ExtResource("40_gghyy")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/download_failed"]
position = Vector2(126, 56.5)
shape = SubResource("RectangleShape2D_k7nuy")

[node name="system_failed" type="StaticBody2D" parent="Platforms"]
position = Vector2(1108, 416)
scale = Vector2(0.755, 0.755)

[node name="TextureRect" type="TextureRect" parent="Platforms/system_failed"]
offset_right = 668.0
offset_bottom = 307.0
scale = Vector2(0.377362, 0.377362)
texture = ExtResource("41_86o80")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/system_failed"]
position = Vector2(126, 56.5)
shape = SubResource("RectangleShape2D_k7nuy")

[node name="PlayerSide" parent="." instance=ExtResource("7_m3xc2")]
position = Vector2(135, 99)
scale = Vector2(1.52127, 1.52127)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="PlayerSide"]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_kmbdv")
animation = &"jump"
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="PlayerSide"]
zoom = Vector2(1.745, 1.745)
>>>>>>> Stashed changes
limit_left = 0
limit_top = 0
limit_bottom = 650
position_smoothing_speed = 15.0

[node name="pitfall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pitfall"]
position = Vector2(794, 661)
scale = Vector2(2, 2)
shape = SubResource("WorldBoundaryShape2D_pr0f7")

[node name="win" type="Area2D" parent="."]
position = Vector2(1360, 536)

[node name="CollisionShape2D" type="CollisionShape2D" parent="win"]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_epvam")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_arhqp")
offset_right = 628.0
offset_bottom = 598.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lsu3e")
}

[connection signal="body_entered" from="pitfall" to="." method="_on_pitfall_body_entered"]
[connection signal="body_entered" from="win" to="." method="_on_win_body_entered"]
